did place the images in wrong folder

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -8,7 +8,7 @@
     </div>
     <div class="col-8">
       <!-- Title goes between these h2 tags -->
-      <h2>{{ about.me }}</h2>
+      <h2>About Johan</h2>
       <!-- Content goes directly underneath this -->
        Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         Eos quas minima perspiciatis,
